Feat: create example with health check

--- a/docker/01-custom-node-image/Dockerfile
+++ b/docker/01-custom-node-image/Dockerfile
@@ -7,9 +7,11 @@ ENV MESSAGE="Hello from Dockerfile"
 
 WORKDIR /app
 
+COPY package*.json ./
+RUN npm install
+
 COPY . .
 
-RUN npm install
 
 # Imagem de produção
 FROM node:${NODE_VERSION}-alpine AS production
